<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hero_section"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:visibility="gone"
    tools:visibility="visible">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/hero_icon"
        android:textAlignment="center"
        android:textSize="52sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="8dp"
        android:text="@string/hero_heading"
        android:textAlignment="center"
        android:textColor="@color/colorTextPrimary"
        android:textSize="26sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hero_subtext"
        android:textAlignment="center"
        android:textColor="@color/colorTextSecondary"
        android:textSize="15sp" />
</LinearLayout>
